force-app/main/default/objects/Distressed_notes__c/Distressed_notes__c.object-meta.xml
<CustomObject>
    <label>Distressed Notes</label>
    <nameField>
        <displayFormat>DN-{0000000}</displayFormat>
        <label>Distressed Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distressed Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>