force-app/main/default/objects/Distressed_notes__c/fields/Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>Agency_ID__c</fullName>
    <description>Populate the agency based on parent object.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Populate the agency based on parent object.</inlineHelpText>
    <label>Agency ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>