force-app/main/default/objects/Distressed_notes__c/fields/Distressed_Notes_Number__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Notes_Number__c</fullName>
    <description>Distressed Notes Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Distressed Notes Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>