force-app/main/default/objects/Distressed_notes__c/fields/DistressedTitle__c.field-meta.xml
<CustomField>
    <fullName>DistressedTitle__c</fullName>
    <formula>HYPERLINK(
  IF(
      CONTAINS($Api.Partner_Server_URL_260, &apos;visual&apos;), 
      &apos;https://&apos;+
      MID($Api.Partner_Server_URL_260, FIND( &apos;visual&apos;, $Api.Partner_Server_URL_260)-4,4)
      +&apos;salesforce.com/&apos;,
      LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
  ) + Id , 
  Title__c

)</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>