force-app/main/default/objects/Distressed_notes__c/fields/Hist_Completed__c.field-meta.xml
<CustomField>
    <fullName>Hist_Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hist Completed</label>
    <type>Date</type>
</CustomField>