force-app/main/default/objects/Distressed_notes__c/fields/Hist_Due__c.field-meta.xml
<CustomField>
    <fullName>Hist_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hist Due</label>
    <type>Date</type>
</CustomField>