force-app/main/default/objects/Distressed_notes__c/fields/Hist_Open__c.field-meta.xml
<CustomField>
    <fullName>Hist_Open__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hist Open</label>
    <length>30</length>
    <type>Text</type>
</CustomField>