force-app/main/default/objects/Distressed_notes__c/fields/Hist_Private__c.field-meta.xml
<CustomField>
    <fullName>Hist_Private__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hist Private</label>
    <length>100</length>
    <type>Text</type>
</CustomField>