force-app/main/default/objects/Distressed_notes__c/fields/Inbound_API_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Inbound_API_Request_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inbound API Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>