force-app/main/default/objects/Distressed_notes__c/fields/Judgment__c.field-meta.xml
<CustomField>
    <fullName>Judgment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Judgment ID</label>
    <referenceTo>Judgment__c</referenceTo>
    <relationshipLabel>Distressed Notes</relationshipLabel>
    <relationshipName>Distressed_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>