force-app/main/default/objects/Distressed_notes__c/fields/Notes_Date__c.field-meta.xml
<CustomField>
    <fullName>Notes_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes Date</label>
    <type>Date</type>
</CustomField>