force-app/main/default/objects/Distressed_notes__c/fields/Notes_History__c.field-meta.xml
<CustomField>
    <fullName>Notes_History__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Notes History</label>
    <length>100</length>
    <type>Text</type>
</CustomField>