force-app/main/default/objects/Distressed_notes__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Distressed Notes</relationshipLabel>
    <relationshipName>Distressed_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>