force-app/main/default/objects/Distressed_notes__c/fields/Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Product_Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product_Identifier</label>
    <length>60</length>
    <type>Text</type>
</CustomField>