force-app/main/default/objects/Distressed_notes__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement ID</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Distressed Notes</relationshipLabel>
    <relationshipName>Distressed_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>