force-app/main/default/objects/Distressed_notes__c/fields/Settlement_account__c.field-meta.xml
<CustomField>
    <fullName>Settlement_account__c</fullName>
    <formula>Settlement__r.Product__c</formula>
    <label>Settlement account</label>
    <type>Text</type>
</CustomField>