force-app/main/default/objects/Distressed_notes__c/fields/Settlement_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement_Identifier</label>
    <length>60</length>
    <type>Text</type>
</CustomField>