force-app/main/default/objects/Distressed_notes__c/recordTypes/Distressed_Notes_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Distressed_Notes_Read_Only</fullName>
    <active>true</active>
    <label>Distressed Notes Read Only</label>
</RecordType>